# profile.wearable.apps.native.w3-home

./: CMakeLists.txt  NOTICE  project.config
home/: CMakeLists.txt  LICENSE  org.tizen.w-home.manifest
home/data/: 500.w-home.patch.sh  CMakeLists.txt  dump_w-home.sh  home_reset.sh  org.tizen.w-home.efl  org.tizen.w-home.xml.in  org.tizen.w-home_ChangeableColorInfo.xml  org.tizen.w-home_ChangeableFontInfo.xml  org.tizen.w-home_apps_ChangeableColorInfo.xml  org.tizen.w-home_apps_ChangeableFontInfo.xml
home/include/: add-viewer.h  add-viewer_debug.h  add-viewer_index.h  add-viewer_package.h  add-viewer_pkgmgr.h  add-viewer_ucol.h  add-viewer_util.h  bg.h  clock_service.h  conf.h  critical_log.h  db.h  dbus.h  edit.h  edit_info.h  effect.h  event_manager.h  factory.h  gesture.h  index.h  index_info.h  item_info.h  key.h  lang.h  layout.h  layout_info.h  log.h  main.h  mapbuf.h  minictrl.h  noti_broker.h  page.h  page_indicator.h  page_info.h  pkgmgr.h  popup.h  power_mode.h  rotary.h  rotary_item_info.h  scroller.h  (+9 more)
home/include/apps/: apps.h  apps_conf.h  apps_data.h  apps_data_type.h  apps_db.h  apps_main.h  apps_manager.h  apps_package_manager.h  apps_view.h  apps_xml.h  bg.h  db.h  effect.h  grid.h  item.h  item_badge.h  item_info.h  lang.h  layout.h  list.h  page.h  page_info.h  pkgmgr.h  rotary.h  rotary_info.h  scroller.h  scroller_info.h  xml.h
home/include/notification/: add_viewer_index.h  detail.h  notification.h  simple.h  summary.h  time.h
home/res/: CMakeLists.txt
home/res/edje/: CMakeLists.txt  color_classes.edc
home/res/edje/circle/: CMakeLists.txt  apps_box.edc  apps_button.edc  apps_grid.edc  apps_item.edc  apps_layout.edc  apps_page.edc  box_layout.edc  clock_shortcut.edc  dynamicbox.edc  edit.edc  home_custom_layout.edc  index.edc  layout.edc  layout1.edc  noti.edc  page.edc  page_clock.edc  page_indicator.edc  popup.edc  preview.edc  preview.edc~  preview1.edc  style.edc
home/res/edje/rectangle/: apps_box.edc  apps_button.edc  apps_conf.edc  apps_item.edc  apps_layout.edc  apps_page.edc  box_layout.edc  conf.edc  dynamicbox.edc  edit.edc  layout.edc  noti.edc  page.edc  page_clock.edc  popup.edc  preview.edc  tutorial.edc
home/res/icon/: CMakeLists.txt
home/res/image/: CMakeLists.txt
home/res/list/: CMakeLists.txt  tts_black.list  tts_white.list
home/res/ordering/: CMakeLists.txt  apps_default_items.xml  apps_default_items_ATT.xml  apps_default_order.xml  default_favorite_apps.xml  default_favorite_apps_emergency.xml  default_favorite_apps_emulator.xml  default_favorite_apps_without_camera.xml  default_favorite_apps_without_camera_sleep.xml  default_favorite_apps_without_hr.xml  default_favorite_apps_without_sleep.xml  default_items.xml  default_items_tts.xml  settings.xml
home/res/po/: CMakeLists.txt  ar.po  as.po  az.po  bg.po  bn.po  ca.po  cs.po  da.po  de.po  el_GR.po  en.po  en_PH.po  en_US.po  es_ES.po  es_US.po  et.po  eu.po  fa.po  fi.po  fr.po  fr_CA.po  ga.po  gl.po  gu.po  he.po  hi.po  hr.po  hu.po  hy.po  id.po  is.po  it_IT.po  ja_JP.po  ka.po  kk.po  km.po  kn.po  ko_KR.po  ky_KG.po  (+40 more)
home/src/: add-viewer.c  add-viewer.c~  add-viewer1.c  add-viewer_index.c  add-viewer_package.c  add-viewer_pkgmgr.c  add-viewer_ucol.c  add-viewer_util.c  bg.c  clock.c  clock_event.c  clock_inf_minictrl.c  clock_inf_widget.c  clock_manager.c  clock_service.c  clock_shortcut.c  clock_util.c  clock_view.c  clock_view_cue.c  clock_view_hidden.c  clock_view_indicator.c  critical_log.c  db.c  dbus.c  dbus_util.c  edit.c  effect.c  event_manager.c  gesture.c  index.c  index_imp_custom.c  index_imp_winset.c  item_info.c  key.c  lang.c  layout.c  main.c  mapbuf.c  minictrl.c  minictrl_manager.c  (+18 more)
home/src/apps/: apps_data.c  apps_db.c  apps_main.c  apps_manager.c  apps_package_manager.c  apps_view.c  apps_xml.c  bg.c  db.c  effect.c  event_manager.c  grid.c  item.c  item_badge.c  item_info.c  lang.c  layout.c  list.c  page.c  pkgmgr.c  rotary.c  rotary_eext.c  scroller.c  xml.c
home/src/notification/: add_viewer_index.c  detail.c  factory.c  notification.c  simple.c  summary.c  time.c
packaging/: org.tizen.w-home.spec
