SET(CHANGEABLEDIR "${PREFIX}/shared/res/tables")

CONFIGURE_FILE(${CMAKE_CURRENT_SOURCE_DIR}/${PACKAGE_NAME}.xml.in ${CMAKE_BINARY_DIR}/${PACKAGE_NAME}.xml)
INSTALL(FILES ${CMAKE_BINARY_DIR}/${PACKAGE_NAME}.xml DESTINATION /usr/share/packages)
INSTALL(FILES ${CMAKE_CURRENT_SOURCE_DIR}/${PACKAGE_NAME}.efl DESTINATION /etc/smack/accesses.d)
INSTALL(FILES ${CMAKE_CURRENT_SOURCE_DIR}/${PACKAGE_NAME}_ChangeableColorInfo.xml DESTINATION ${CHANGEABLEDIR})
INSTALL(FILES ${CMAKE_CURRENT_SOURCE_DIR}/${PACKAGE_NAME}_ChangeableFontInfo.xml DESTINATION ${CHANGEABLEDIR})
INSTALL(FILES ${CMAKE_CURRENT_SOURCE_DIR}/${PACKAGE_NAME}_apps_ChangeableColorInfo.xml DESTINATION ${CHANGEABLEDIR})
INSTALL(FILES ${CMAKE_CURRENT_SOURCE_DIR}/${PACKAGE_NAME}_apps_ChangeableFontInfo.xml DESTINATION ${CHANGEABLEDIR})
INSTALL(FILES ${CMAKE_CURRENT_SOURCE_DIR}/dump_w-home.sh DESTINATION /opt/etc/dump.d/module.d/ PERMISSIONS OWNER_READ OWNER_WRITE OWNER_EXECUTE GROUP_READ GROUP_EXECUTE WORLD_READ WORLD_EXECUTE)
INSTALL(FILES ${CMAKE_CURRENT_SOURCE_DIR}/home_reset.sh PERMISSIONS OWNER_EXECUTE OWNER_WRITE OWNER_READ DESTINATION ${RESDIR})
INSTALL(FILES ${CMAKE_CURRENT_SOURCE_DIR}/500.w-home.patch.sh PERMISSIONS OWNER_EXECUTE OWNER_WRITE OWNER_READ DESTINATION /etc/opt/upgrade)
