SET(CHANGEABLEDIR "${PREFIX}/shared/res/tables")

CONFIGURE_FILE(${CMAKE_CURRENT_SOURCE_DIR}/${PACKAGE_NAME}.xml.in ${CMAKE_BINARY_DIR}/${PACKAGE_NAME}.xml)
INSTALL(FILES ${CMAKE_BINARY_DIR}/${PACKAGE_NAME}.xml DESTINATION /usr/share/packages)
INSTALL(FILES ${CMAKE_CURRENT_SOURCE_DIR}/${PACKAGE_NAME}_ChangeableColorInfo.xml DESTINATION ${CHANGEABLEDIR})
INSTALL(FILES ${CMAKE_CURRENT_SOURCE_DIR}/${PACKAGE_NAME}_ChangeableFontInfo.xml DESTINATION ${CHANGEABLEDIR})
INSTALL(FILES ${CMAKE_CURRENT_SOURCE_DIR}/${PACKAGE_NAME}_apps_ChangeableColorInfo.xml DESTINATION ${CHANGEABLEDIR})
INSTALL(FILES ${CMAKE_CURRENT_SOURCE_DIR}/${PACKAGE_NAME}_apps_ChangeableFontInfo.xml DESTINATION ${CHANGEABLEDIR})
