INSTALL(FILES ${CMAKE_CURRENT_SOURCE_DIR}/unknown.png DESTINATION ${IMAGEDIR})
IF("${CIRCLE}" STREQUAL "circle")
INSTALL(FILES ${CMAKE_CURRENT_SOURCE_DIR}/widget_circle_bg_stroke.png DESTINATION ${IMAGEDIR})
ELSE()
INSTALL(FILES ${CMAKE_CURRENT_SOURCE_DIR}/b_home_screen_widget_line.png DESTINATION ${IMAGEDIR})
ENDIF()
