INSTALL(FILES ${CMAKE_CURRENT_SOURCE_DIR}/default_favorite_apps_emergency.xml DESTINATION ${RESDIR})
INSTALL(FILES ${CMAKE_CURRENT_SOURCE_DIR}/default_items.xml DESTINATION ${RESDIR})
INSTALL(FILES ${CMAKE_CURRENT_SOURCE_DIR}/default_items_tts.xml DESTINATION ${RESDIR})
INSTALL(FILES ${CMAKE_CURRENT_SOURCE_DIR}/settings.xml DESTINATION ${RESDIR})
IF(RUN_ON_DEVICE)
	INSTALL(FILES ${CMAKE_CURRENT_SOURCE_DIR}/default_favorite_apps.xml DESTINATION ${RESDIR})
	INSTALL(FILES ${CMAKE_CURRENT_SOURCE_DIR}/default_favorite_apps_without_hr.xml DESTINATION ${RESDIR})
	INSTALL(FILES ${CMAKE_CURRENT_SOURCE_DIR}/default_favorite_apps_without_sleep.xml DESTINATION ${RESDIR})
	INSTALL(FILES ${CMAKE_CURRENT_SOURCE_DIR}/default_favorite_apps_without_camera.xml DESTINATION ${RESDIR})
	INSTALL(FILES ${CMAKE_CURRENT_SOURCE_DIR}/default_favorite_apps_without_camera_sleep.xml DESTINATION ${RESDIR})
ELSEIF(RUN_ON_EMULATOR)
	INSTALL(FILES ${CMAKE_CURRENT_SOURCE_DIR}/default_favorite_apps_emulator.xml DESTINATION ${RESDIR} RENAME default_favorite_apps.xml)
ENDIF()

INSTALL(FILES ${CMAKE_CURRENT_SOURCE_DIR}/apps_default_items.xml DESTINATION ${RESDIR})
